# ose

./: .gitignore  .gitmodules  LICENSE  Makefile  ose.c  ose.h  ose_assert.c  ose_assert.h  ose_builtins.c  ose_builtins.h  ose_conf.h  ose_conf.h.example  ose_context.c  ose_context.h  ose_import.c  ose_import.h  ose_lex.c  ose_lex.h  ose_match.c  ose_match.h  ose_parse.c  ose_parse.h  ose_print.c  ose_print.h  ose_repl.c  ose_stackops.c  ose_stackops.h  ose_symtab.c  ose_symtab.gperf  ose_symtab.h  ose_util.c  ose_util.h  ose_vm.c  ose_vm.h  osec.c
Applications/Arduino/: README.md  conf.h
Applications/Arduino/ESP32-WiFiUDP/: ESP32-WiFiUDP-conf.h
Applications/Arduino/oseduino/: oseduino.ino
Applications/Max/o.se/: .gitignore
Applications/Max/o.se/help/: o.se.maxhelp
Applications/Microcontrollers/: README.md
Applications/Microcontrollers/ESP32-WiFiUDP/: ESP32-WiFiUDP.ino  ESP32-WiFiUDP.maxpat
Applications/Microcontrollers/ESP8266-WiFiUDP/: ESP8266-WiFiUDP.ino  ESP8266-WiFiUDP.maxpat  ESP8266-WiFiUDP.pd  conf.h
Applications/Microcontrollers/Teensy4.0-USBSerial/: Teensy4.0-USBSerial.ino  Teensy4.0-USBSerial.maxpat  Teensy4.0-USBSerial.pd
Applications/Microcontrollers/pico/pico-serial/: CMakeLists.txt  pico-serial.c  pico-serial.maxpat
Applications/repl/: linenoise.c  linenoise.h  ose_repl.c
js/: ose.js  ose_js.c  ose_wrapper.js  osejs.c  osejs_export.mk  osevm.js  osevm_wrapper.js  package.json
osec/: osec.c
sys/: ose_endianchk.c  ose_load.c  ose_load.h  ose_time.c  ose_time.h
test/: common.h  ut_common.h  ut_ose_stackops.c  ut_ose_util.c
(+13 files in other folders)
